--- a/field_coordination_browser/src/index.html
+++ b/field_coordination_browser/src/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Precinct Search Tool</h1>
+      <h1>Alabama Forward - 2025 Precinct Selector</h1>
       
       <div class="search-section">
         <h2>Search Criteria</h2>
